{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 588,
  "lineage": "77c1a882-ba6b-91f2-a40f-17fc7176b3d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edaf793feb9ded2d",
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:elastic-ip/eipalloc-0edaf793feb9ded2d",
            "domain": "vpc",
            "id": "eipalloc-0edaf793feb9ded2d",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-238-65.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.238.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cjo-std-nat-ip-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "tags_all": {
              "Name": "cjo-std-nat-ip-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:internet-gateway/igw-0ad826f81302723e4",
            "id": "igw-0ad826f81302723e4",
            "owner_id": "627500151784",
            "tags": {
              "Name": "cjo-std-igw-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "tags_all": {
              "Name": "cjo-std-igw-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edaf793feb9ded2d",
            "association_id": "eipassoc-091d809171c1a2da6",
            "connectivity_type": "public",
            "id": "nat-082a2ec875580d401",
            "network_interface_id": "eni-0189735eb2ce836c0",
            "private_ip": "10.0.0.5",
            "public_ip": "13.209.238.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa895aeae80df35b",
            "tags": {
              "Name": "cjo-std-nat-gw-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "tags_all": {
              "Name": "cjo-std-nat-gw-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public-a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:route-table/rtb-02a0e0b70f66d9b61",
            "id": "rtb-02a0e0b70f66d9b61",
            "owner_id": "627500151784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-082a2ec875580d401",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cjo-std-pri-route-table-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "tags_all": {
              "Name": "cjo-std-pri-route-table-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_subnet.public-a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:route-table/rtb-05e9543fbb3a89d10",
            "id": "rtb-05e9543fbb3a89d10",
            "owner_id": "627500151784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad826f81302723e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cjo-std-pub-route-table-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "tags_all": {
              "Name": "cjo-std-pub-route-table-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f35ae0e8ca3df632",
            "route_table_id": "rtb-02a0e0b70f66d9b61",
            "subnet_id": "subnet-0b8bd5abe354d2292"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private-a",
            "aws_subnet.public-a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6da28fa2a59ee43",
            "route_table_id": "rtb-02a0e0b70f66d9b61",
            "subnet_id": "subnet-0006549bcaba6bc0b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private-b",
            "aws_subnet.public-a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013300961dd01fc9a",
            "route_table_id": "rtb-05e9543fbb3a89d10",
            "subnet_id": "subnet-0fa895aeae80df35b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public-a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0992eb160ec200bef",
            "route_table_id": "rtb-05e9543fbb3a89d10",
            "subnet_id": "subnet-0b075d6c20efb19b2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public-b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:security-group/sg-074a8a431905acfda",
            "description": "EKS Control Plane Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074a8a431905acfda",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cjo-std-ctrl-plane-sg-study-eks",
            "name_prefix": "",
            "owner_id": "627500151784",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_to_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:security-group/sg-0ea06af21cf44c840",
            "description": "Allow worker nodes to communicate with control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea06af21cf44c840",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074a8a431905acfda"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cjo-std-eks-node-to-ctrl-plane-sg-study-eks",
            "name_prefix": "",
            "owner_id": "627500151784",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_control_plane_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:security-group/sg-05c9cd4ea5a98433c",
            "description": "EKS Worker Nodes Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c9cd4ea5a98433c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 10255,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10255
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "cjo-std-wrk-nodes-sg-study-eks",
            "name_prefix": "",
            "owner_id": "627500151784",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:security-group/sg-01d4ea3ac3397242f",
            "description": "Security group for Nginx Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d4ea3ac3397242f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cjo-std-nginx-lb-sg-study-eks",
            "name_prefix": "",
            "owner_id": "627500151784",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_lb_sg_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:security-group/sg-03af8d4e5ced66751",
            "description": "Security group for Nginx Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03af8d4e5ced66751",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cjo-std-nginx-8080-lb-sg-study-eks",
            "name_prefix": "",
            "owner_id": "627500151784",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:subnet/subnet-0b8bd5abe354d2292",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8bd5abe354d2292",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627500151784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cjo-std-pri-subnet-a-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "tags_all": {
              "Name": "cjo-std-pri-subnet-a-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:subnet/subnet-0006549bcaba6bc0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0006549bcaba6bc0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627500151784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cjo-std-pri-subnet-b-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "tags_all": {
              "Name": "cjo-std-pri-subnet-b-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:subnet/subnet-0fa895aeae80df35b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa895aeae80df35b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627500151784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cjo-std-pub-subnet-a-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "tags_all": {
              "Name": "cjo-std-pub-subnet-a-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:subnet/subnet-0b075d6c20efb19b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b075d6c20efb19b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627500151784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cjo-std-pub-subnet-b-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "tags_all": {
              "Name": "cjo-std-pub-subnet-b-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "vpc_id": "vpc-0adf5520feec12a25"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627500151784:vpc/vpc-0adf5520feec12a25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-00dac1c9f730d2fab",
            "default_route_table_id": "rtb-06785f6e0237e576a",
            "default_security_group_id": "sg-0ba7efffda3337b66",
            "dhcp_options_id": "dopt-cdde3fa4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0adf5520feec12a25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06785f6e0237e576a",
            "owner_id": "627500151784",
            "tags": {
              "Name": "cjo-std-vpc-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            },
            "tags_all": {
              "Name": "cjo-std-vpc-study-eks",
              "author": "lhysin",
              "owner": "lhysin",
              "phase": "std",
              "service": "study-eks",
              "team": "cjenm-arch"
            }
          }
        }
      ]
    }
  ]
}